# yatc

./: .bazelrc  .gitignore  .gitmodules  AUTHORS  BUGS  BUILD  BUILD.libsdlgfx  CNAME  CODEOWNERS  ChangeLog  GLICT.devpak  Home-r.html  Home.html  INSTALL  Info.plist  Makefile.am  README  README.md  ROADMAP  SDL_gfx.DevPak  WORKSPACE  YATC.sln  YATC.vcproj  YATCce.vcproj  _checkout_modules.sh  _config.yml  _install_act_dependencies.ps1  _install_msys.ps1  _run_act.ps1  additional-tools.html  archive-of-the-dev-thread-first-post.html  assert.h  automap.cpp  automap.h  autorelease.sh  bazel.bat  bigint.cpp  bigint.h  buildbuddy.yaml  choicegrid.cpp  (+116 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  issue_query_notebook.github-issues
_layouts/: default.html
cli/: BUILD  Makefile  README.md  creatureui.cpp  dat2json_cli.cpp  distanceui.cpp  effectui.cpp  itemui.cpp  notifications.cpp  objects.cpp  yatc_cli.cpp
debian/: README.Debian  changelog  control  copyright  cron.d.ex  files  init.d  init.d.lsb.ex  manpage.1.ex  menu  postinst.ex  postrm.ex  prerm.ex  rules  watch.ex  yatc-default.ex  yatc.6  yatc.desktop  yatc.install
dot-git/: config
downloads/: debian-repository.html
fetcher/: README.txt  libcurl-7.14.0_ssl-1sid.DevPak  libtiff-3.6.1_2-1spec.DevPak  openssl-0.9.8-1cm.DevPak
gamecontent/: BUILD  Makefile  container.cpp  container.h  creature.cpp  creature.h  enums.h  globalvars.cpp  globalvars.h  inventory.cpp  inventory.h  item.cpp  item.h  map.cpp  map.h  position.h  shop.h  thing.h  viplist.cpp  viplist.h
lib/: GLICT.devpak  README.txt  SDL.devpak
mac/: README  SDLMain.m
net/: BUILD  Makefile  connection.cpp  connection.h  connectionreplay.cpp  connectionreplay.h  encryption.cpp  encryption.h  enum.h  networkmessage.cpp  networkmessage.h  protocolconfig.cpp  protocolconfig.h  protocolgame.cpp  protocolgame.h  protocolgame76.h  protocolgame78.cpp  protocolgame78.h  protocolgame80.cpp  protocolgame80.h  protocolgame81.cpp  protocolgame81.h  protocolgame811.cpp  protocolgame811.h  protocolgame82.cpp  protocolgame82.h  protocolgame821.cpp  protocolgame821.h  protocolgame822.cpp  protocolgame822.h  protocolgame83.cpp  protocolgame83.h  protocolgame831.cpp  protocolgame831.h  protocolgame84.cpp  protocolgame84.h  protocolgame841.cpp  protocolgame842.cpp  protocolgame842.h  protocolgame85.cpp  (+7 more)
tools/: bazel.rc  latest_version_tag.sh
tools/pictool/: BUILD.bazel  Makefile  README  debugscript.bat  main.c  picfuncs.c  pictool.cbp  winmain.c
tools/sprtool/: BUILD.bazel  winmain.c
translations/: BUILD  README  brazilian.po  brazilian.pot  build.sh  croatian.po  es_ES.po  hr_HR.po  mergeall.sh  pl_PL.po  polish.po  prepare.sh  pt_BR.po  spanish.po  sv_SE.po  swedish.po  yatc.pot
trunk/: AUTHORS  BUGS  INSTALL  Info.plist  Makefile.am  README  ROADMAP  YATC.sln  YATC.vcproj  YATCce.vcproj  assert.h  automap.cpp  automap.h  autorelease.sh  bigint.cpp  choicegrid.cpp  choicegrid.h  clipboard.cpp  clipboard.h  config.h  confighandler.cpp  configure.ac  console.cpp  console.h  container.cpp  creature.h  creatureui.cpp  creatureui.h  database.cpp  database.h  debugprint.cpp  debugprint.h  defines.h  distanceui.cpp  distanceui.h  effectui.cpp  effectui.h  engine.cpp  engine.h  enginedx.cpp  (+66 more)
trunk/English.lproj/: InfoPlist.strings
trunk/debian/: README.Debian  changelog  control  dirs  docs  emacsen-install.ex  emacsen-remove.ex  files  manpage.1.ex  postinst.ex  preinst.ex  prerm.ex  rules  watch.ex  yatc.substvars
trunk/debian-data/tibia-data-8.1/debian/: control
trunk/debian-data/tibia-data-8.11/debian/: rules
trunk/gamecontent/: Makefile  container.h  creature.cpp  creature.h  enums.h  globalvars.cpp  globalvars.h  inventory.h  item.cpp  item.h  map.cpp  map.h  position.h  shop.h  thing.h
trunk/net/: Makefile  connection.cpp  connection.h  connectionreplay.cpp  encryption.cpp  encryption.h  networkmessage.cpp  networkmessage.h  protocolgame.cpp  protocolgame.h  protocolgame74.cpp  protocolgame76.cpp  protocolgame78.cpp  protocolgame78.h  protocolgame80.cpp  protocolgame80.h  protocolgame81.cpp  protocolgame81.h  protocolgame811.cpp  protocolgame811.h  protocolgame82.cpp  protocolgame82.h  protocolgame821.h  protocolgame822.h  protocolgame83.cpp  protocolgame83.h  protocolgame831.h  protocolgame84.cpp  protocolgame841.cpp  protocolgame841.h  protocolgame842.cpp  protocolgame85.cpp  protocolgame85.h  protocolgame853.cpp  protocolgame854.cpp  protocollogin.cpp  protocollogin.h  rsa.cpp  rsa.h
trunk/tools/fetcher/: Data_File_FetcherApp.cpp  Data_File_FetcherMain.cpp  Data_File_FetcherMain.h  README.txt  fetcher.cbp
trunk/tools/fetcher-stdio/: fetcher.bat
trunk/tools/fetcher/wxsmith/: Data_File_Fetcherdialog.wxs
trunk/tools/file2hex/: file2hex.c
trunk/tools/pictool/: Makefile  debugscript.bat  main.c  picfuncs.c  picfuncs.h  pictool.cbp
trunk/tools/sprtool/: main.c  sprtool.cbp  winmain.c
trunk/tools/wxpictool/: README.pictool.txt  README.txt  wxPicToolApp.cpp  wxPicToolMain.cpp  wxpictool.cbp
trunk/tools/wxpictool/wxsmith/: wxPicToolframe.wxs
trunk/translations/: brazilian.po  build.sh  croatian.po  es_ES.po  merge.sh  pl_PL.po  polish.po  prepare.sh  pt_BR.po  spanish.po  swedish.po  yatc.pot
trunk/ui/: battlewindow.cpp  battlewindow.h  charlist.h  checkbox.h  container.h  deathnotification.h  exitwarning.h  gmactions.cpp  health.h  inventory.h  itemmove.h  itempanel.cpp  itempanel.h  itemplanel.cpp  login.h  mainmenu.cpp  mainmenu.h  minimap.h  options.h  optionsconsole.h  optionsgeneral.h  optionsgfxadv.h  optionsgraphics.h  optionshotkeys.h  optionsnetwork.h  optionsui.cpp  optionsui.h  sbvlpanel.cpp  sbvlpanel.h  skills.h  tutorialhints.cpp  tutorialhints.h  uicontainer.cpp  uicontainer.h  uiinventory.cpp  uiinventory.h  uioutfit.cpp  uioutfit.h  uishop.cpp  uishop.h  (+4 more)
trunk/yatc.vc9/: readme.txt  yatc.vc9.vcproj
trunk/yatc.xcodeproj/: ivucica.mode1v3  ivucica.pbxuser  project.pbxproj
ui/: Makefile  battlewindow.cpp  battlewindow.h  charlist.h  checkbox.h  container.h  exitwarning.h  (+41 more)
(+241 files in other folders)
